# bobcmake

./: LICENSE  README.md  bob.cmake  version.h.in
test/: CMakeLists.txt  README.md  build.sh
test/appfoobar/: CMakeLists.txt
test/appfoobar/src/: TheClass.cpp  TheClass.h  main.cpp
test/libfoobar/: CMakeLists.txt
test/libfoobar/etc/: configuration.ini
test/libfoobar/include/: foobar.h  foobar.hh
test/libfoobar/src/: foobar.cpp  foobar_plugin.cpp
test/libfoobar/test/: test.foppa.cpp  test.sudden.cpp
test/test/: test.tmp.sudden.cpp
